# motd

./: CMakeLists.txt  MotdCoreConfig.cmake.in  MotdCoreConfigVersion.cmake.in  README.md
cmake/: macros.cmake
modules/cli/: CMakeLists.txt
modules/cli/man/: motd.1
modules/cli/src/: main.cpp
modules/core/: CMakeLists.txt
modules/core/include/motd/: errors.hpp  info.hpp  motd.hpp  settings.hpp
modules/core/include/motd/utils/: utils.hpp
modules/core/src/: utils.cpp
modules/core/src/.deps/: errors.Plo  main.Po  utils.Plo  utils.Tpo
